--- a/lularizer-wireframe/new.html
+++ b/lularizer-wireframe/new.html
@@ -23,7 +23,10 @@ html, footer {
 <div id="photoGuide"></div>
 </article>
 
-<footer><p><button onclick="history.back()">Cancel</button><button onclick="goToEdit()">Take photo</button></footer>
+<footer>
+<p><button onclick="history.back()">Cancel</button>
+    <button onclick="goToEdit()">Take photo</button>
+</footer>
 
 <script>
 var stockPhotos = ['IMG_0092.jpg', 'IMG_0094.jpg', 'IMG_0096.jpg', 'IMG_0104.jpg', 'IMG_0106.jpg', 'IMG_0204.jpg', 'IMG_0205.jpg', 'IMG_0206.jpg'];
